--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/p5@1.11.11/lib/p5.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.11.11/lib/addons/p5.sound.min.js"></script>
-    <script src="./sketch.js"></script>
     <script src="./content_handler_vimeo.js"></script>
     <script src="https://player.vimeo.com/api/player.js"></script>
     
@@ -17,6 +16,7 @@
 
     <div class="landing-page">
         <div id="carpet"></div>
+        <img id="logo-cursor" src="./asset/icon/cursor.svg">
     </div>
 
 
@@ -113,6 +113,8 @@
             <span><a href = "https://www.instagram.com/b.l.u.s.h.c.r.i.m.e/">Instagram</a></span><span>About</span>
         </menu>
     </div>
+
+    <script src="./sketch.js"></script>
     <script src="./script.js"></script>
 </body>
 </html>
