--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <div class="primary">
         <header>
-            <h1>Yuna is a 3D graphic designer based in Seoul. Contact me via <a href="mailto:blushcrime@gmail.com"><u>blushcrime@gmail.com</u></a></h1>
+            <h1>Yoona is a multidisciplinary designer based in Seoul. Contact me via <a href="mailto:blushcrime@gmail.com"><u>@b.l.u.s.h.c.r.i.m.e</u></a></h1>
         </header>
         <main>
             <div class="text-content">
